[project]
name = "playwright-http-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "flask>=3.1.1",
    "selenium>=4.34.2",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]
